--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -25,3 +25,5 @@
         = f.password_field :password_confirmation, autocomplete: "off"
       .actions
         = f.submit "Sign up"
+    = link_to 'Facebookで登録', user_facebook_omniauth_authorize_path, method: :post
+    = link_to 'Googleで登録', user_google_oauth2_omniauth_authorize_path, method: :post
