--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,10 @@
 .contents.row
+  .breadcrumb
+    - breadcrumb :mypage
   %p
     = @nickname
     さんの投稿一覧
   - @tweets.each do |tweet|
     = render partial: "tweets/tweet", locals: { tweet: tweet }
   = paginate(@tweets)
+
